--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Akash' Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr/>
-    <a href="../4.3 HTML Porfolio Project Class 28/public/movie-ranking.html">Movie Ranking Project</a>
+    <a href="./4.3 HTML Porfolio Project Class 28/public/movie-ranking.html">Movie Ranking Project</a>
     <br/>
     <image src="./assets/images/Fav-movie.jpeg" height="200" alt="favourite movie project">
 <br/>
